--- a/config.yml
+++ b/config.yml
@@ -31,7 +31,7 @@ Parameters:
     Default: 10.0.0.0/16
 
 Resources:
-  ProfileWithRolesForOurApp:
+  ProfileWithRolesForApp:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Roles:
@@ -44,7 +44,7 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref EnvironmentName
-          
+
   WebAppLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -68,7 +68,7 @@ Resources:
             VolumeSize: "10"
 
 Outputs:
-  VPC: 
+  VPC:
     Description: A reference to the created VPC
     Value: !Ref VPC
     Export:
