move profile role into servers.yml

--- a/servers.yml
+++ b/servers.yml
@@ -28,6 +28,12 @@ Parameters:
     ConstraintDescription: Must have at least 4GB of Memory
 
 Resources:
+  ProfileWithRolesForApp:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Roles:
+        - UdacityS3ReadOnlyEC2
+
   LBSecGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
